# contabo-pricing-scraper

./: .gitignore  Cargo.toml  PRICES.md  README.md  package.json
.github/scripts/: discover_plans.js  enrich_output.js  generate_report.js  generate_report.py  post_scrape_audit.js
.github/workflows/: release.yml  scrape.yml
archive/: contabo_scraper_v5.js
data/: plan_urls.json
data/output/: contabo_base_plans.csv  contabo_base_plans.json  contabo_base_plans_enhanced.csv  contabo_base_plans_enhanced.json  contabo_configs.json  contabo_configs_enhanced.json  contabo_dimension_schema.json  contabo_option_catalog.csv  contabo_option_catalog_enhanced.csv  contabo_pricing_dataset.json  contabo_pricing_dataset_enhanced.json  contabo_quick_reference.json
data/snapshots/: cloud_vps10.html
scripts/: bump-version.sh  contabo_scraper.js
src/: main.rs
