[package]
name = "contabo-scraper"
version = "2.1.3"
edition = "2021"
description = "Scrapes Contabo Cloud VPS, Storage VPS, and Cloud VDS pricing from embedded __SAPPER__ payloads"
license = "MIT"

[[bin]]
name = "contabo-scraper"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["rt-multi-thread", "macros", "time"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
serde_json  = "1"
rquickjs    = { version = "0.8",  default-features = false, features = ["array-buffer"] }
once_cell   = "1"
regex       = "1"
chrono      = { version = "0.4",  default-features = false, features = ["clock", "std"] }
futures     = { version = "0.3",  default-features = false, features = ["executor"] }

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true
panic          = "abort"
